--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 	<head><title>Prueba</title>
 	</head>
 <body>
-	<h1>Hola, Probando mi repositorio</h1>
+	<h1>Hola, Probando mi repositorio VI Semestre </h1>
 </body>
 </html>
